<resources>
    <string name="app_name">HistoricalPlaces</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="fullName">نام کاربر</string>
    <string name="id">کد ملی</string>
    <string name="phone">شماره تلفن</string>
    <string name="wellcome">برای مشاهده جزئیات اماکن، روی عکس کلیک کنید.</string>
    <string name="firstPlace">چغازنبیل</string>
    <string name="bam">ارگ بم</string>
    <string name="hegmatane">تپه هگمتانه</string>
    <string name="jamshid">تخت جمشید</string>
    <string name="sixthDetail">حافظیه یا آرامگاه حافظ، محل خاکسپاری حافظ شیرازی در شیراز است. این بنا به فرمان رضاشاه به علی‌اصغر حکمت، وزیر آموزش و پرورش وقت و برپایهٔ طرحی از آندره گُدار طراحی و بازسازی شد. مجری آن، علی ریاضی، رئیس اداره آموزش و پرورش فارس، و سرپرستش علی سامی بودند.
حافظیه بارها از سوی حاکمان تیموری، صفوی، افشار و زند بازسازی و مرمت شد. سرانجام در سال ۱۳۱۴ ش/۱۹۳۵ م، آخرین اقدام مهم و شایسته توسط وزارت آموزش و پرورش فارس به ابتکار علی‌اصغر حکمت، وزیر آموزش و پرورش صورت گرفت و ساخت یک بنای جدید ترتیب داده شد.</string>
    <string name="fifthDetail">مسجد شیخ لطف‌الله یکی از مسجدهای تاریخی و شناخته شده شهر اصفهان، در ضلع شرقی میدان نقش جهان است که در دوران صفوی ساخته شده‌است. این مسجد شاهکاری از معماری و کاشی‌کاری قرن یازدهم هجری است که توسط استاد محمدرضا اصفهانی از معماران نامدار آن دوره ساخته شده‌است. مسجد شیخ لطف‌الله به فرمان شاه عباس اول در مدت هجده سال بنا شده و در ضلع شرقی میدان نقش جهان و مقابل عمارت عالی‌قاپو و در همسایگی مسجد شاه واقع شده‌است. این مکان مذهبی برای تجلیل شیخ لطف‌الله میسی بنا گردیده و سالانه گردشگران زیادی را جذب خود می‌کند.</string>
    <string name="forthDetail">تخت جمشید یا پارسه ام یکی از شهرهای باستانی ایران است که طی سالیان، پیوسته پایتخت باشکوه و تشریفاتی پادشاهی ایران در زمان امپراتوری هخامنشیان بوده‌است. در این شهر باستانی کاخی به نام تخت جمشید وجود دارد که در دوران زمامداری داریوش بزرگ، خشایارشا و اردشیر اول بنا شده‌است و به مدت حدود ۲۰۰ سال آباد بوده‌است. در نخستین روز سال نو گروه‌های زیادی از کشورهای گوناگون به نمایندگی از ساتراپی‌ها یا استانداری‌ها با پیشکش‌هایی متنوع در تخت جمشید جمع می‌شدند و هدایای خود را به شاه پیشکش می‌کردند.</string>
    <string name="thirdDetail">هَگمَتانَه، پایتخت مادها، پایتخت تابستانی هخامنشیان، و ساتراپ‌نشین ماد از هخامنشیان تا ساسانیان بود. یونانیان هگمتانه را اِکباتان می‌خواندند.
این شهر کهن، نخستین پایتخت ایران بوده و به همراه آتن در یونان و رم در ایتالیا و شوش در خوزستان، از معدود شهرهای باستانی جهان است که همچنان زنده و مهم مانده‌است. هرودوت این شهر را ساخته دیااکو دانسته و گفته‌است که هفت دیوار داشته که هر کدام به رنگ یکی از سیاره‌ها بوده‌اند.
در سال ۵۵۰ پیش از میلاد، ایشتوویگو شاه ماد از کوروش هخامنشی شکست می‌خورد و پیرو آن هگمتانه به تسخیر کوروش در می‌آید.</string>
    <string name="secondDetail">ارگ بم بزرگترین سازهٔ خشتی در جهان است که محل آن در شهر بم در استان کرمان در جنوب شرقی ایران قرار داشت. در تاریخ ۵ دی ۱۳۸۲، در اثر زلزله بم آسیب دید اما در بدو حادثه به دلیل اهمیت آن سریعاً در فهرست آثار میراث جهانی درخطر قرار گرفت و با همکاری یونسکو و بسیاری از کشورها پروژه نجات بخشی این اثر انجام شد. چند روز پس از زلزله، محمد خاتمی، رئیس‌جمهور وقت ایران، دستور بازسازی آن را صادر کرد. بم و فضای فرهنگی آن در فهرست میراث جهانی یونسکو (به عنوان بخشی از میراث جهانی "بم و چشم انداز فرهنگی آن") به ثبت رسیده‌است.</string>
    <string name="firstDetail">زیگورات دوراونتاش (که بیشتر با نام چُغازَنبیل شناخته می‌شود، نیایشگاهی باستانی است که حدود ۱۲۵۰ سال پیش از میلاد در تمدن ایلام ساخته شد. این زیگورات، بنای مرکزی محوطه باستانی به‌جای مانده از مجموعهٔ ایلامی دوراونتاش (شهر اونتاش) است که نزدیک شوش در استان خوزستان قرار گرفته‌است. چغازنبیل در سال ۱۹۷۹ میلادی به عنوان اولین اثر تاریخی از ایران در فهرست میراث جهانی یونسکو جای گرفت و معماری منحصر به فرد آن، در کنار زیگورات‌های کشف شده در میان رودان، برای باستان‌شناسان و علاقه‌مندان به تاریخ و میراث فرهنگی جهانی شناخته شده‌است.</string>
    <string name="chooseItem">شما می توانید تعداد نتایج قابل مشاهده را انتخاب کنید:</string>
    <string name="editText">می توانید مشخصات خود را ویرایش کنید.</string>
    <string name="editButton">ویرایش اطلاعات</string>
    <string name="light">روشن</string>
    <string name="dark">تیره</string>
    <string name="bankIntro">اطلاعات حساب بانکی شما:</string>
    <string name="bankIntroEdit">اطلاعات حساب بانکی خود را وارد کنید:</string>
    <string name="accountNumber">شماره حساب:</string>
    <string name="cardNumber">شماره کارت:</string>
    <string name="shabaNumber">شماره شبا:</string>
    <string name="accountNumberEdit">شماره حساب خود را اینجا وارد کنید.</string>
    <string name="cardNumberEdit">شماره کارت خود را اینجا وارد کنید.</string>
    <string name="shabaNumberEdit">شماره شبا خود را اینجا وارد کنید.</string>
    <string name="bankInfoEdit">اطلاعات حساب بانکی خود را ویرایش کنید.</string>
    <string name="bankInfoEditBtn">ویرایش اطلاعات بانکی</string>
    <string name="registerChanges">ثبت تغییرات</string>
    <string name="point">پند روز</string>
    <string name="address">آدرس</string>
    <string name="email">آدرس ایمیل</string>
    <string name="profPic">ادرس اینترنتی تصویر پروفایل</string>
    <string name="editRegister">ثبت مشخصات</string>
    <string name="register">Register</string>
    <string name="showChoice">آیا مایل به نمایش اطلاعات خود هستید؟</string>
    <string name="mosque">مسجد شیخ لطف‌الله</string>
    <string name="hafezie">حافظیه</string>

</resources>