<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseItem"
            android:layout_margin="10dp"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/purple_200"/>


        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:min="1"
            android:max="4" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/editText"
            android:textColor="@color/darkGreen"
            android:textSize="20sp" />

        <Button
            android:id="@+id/editBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editButton"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="تم مورد نظر خود را انتخاب کنید."
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/orange" />
        <Button
            android:id="@+id/light"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/light"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:text="@string/dark"
            android:textSize="20sp"
            android:layout_gravity="center"/>

    </LinearLayout>



</ScrollView>