<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:layout_margin="20dp"
    android:background="@drawable/pink_outline_txv">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#78DDD3"
            android:background="@drawable/pink_outline_txv"
            android:padding="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:cardUseCompatPadding="true">
            <TextView
                android:id="@+id/personalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:gravity="center"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wellcome"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/purple_200"/>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/second_outline_txv"/>

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstPlace"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/blue"
            android:layout_gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/bam"
                android:textColor="@color/red"
                android:textSize="30sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/orange"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/name3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hegmatane"
                android:textSize="30sp"
                android:gravity="center"
                android:textColor="@color/orange"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/orange"
                android:layout_marginTop="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/name4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jamshid"
                android:gravity="center"
                android:textColor="@color/green"
                android:textSize="30sp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/orange"
                android:layout_marginTop="30dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/name5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mosque"
                android:gravity="center"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:layout_gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/orange"
                android:layout_marginTop="30dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/name6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hafezie"
                android:gravity="center"
                android:textColor="@color/pink"
                android:textSize="30sp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/pointFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="sentence"
            android:text="@string/point"
            android:textSize="20sp"
            app:icon="@drawable/ic_baseline_highlight_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>